Проверка уроков и перемен сделана!

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="content" id="break_timer">
         <div class="numbers">
-            <div class="number lesson"><b id="lesson">{{ lNumber }}</b> урок</div>
+            <div class="number lesson"><b>{{ lNumber }}</b> урок</div>
             <div class="timetable" id="timetable"> сегодня - {{ today }}</div>
             <div class="number couple_lesson"><b id="couple_lesson">777</b> пара</div>
         </div>
