--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="numbers">
             <div class="number next_break" v-html="nextBreak"> </div>
-            <div class="number streams">
+            <div class="streams">
                 <div class="stream" id="first_stream">1 поток</div>
                 <div class="stream active" id="second_stream">2 поток</div>
             </div>
